--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,6 +98,11 @@
                 <data android:scheme="mms" />
                 <data android:scheme="mmsto" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH_LONG_PRESS"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
            <intent-filter>
                <action android:name="android.intent.action.SEND" />
                <category android:name="android.intent.category.DEFAULT" />
@@ -118,6 +123,9 @@
                <category android:name="android.intent.category.DEFAULT" />
                <data android:mimeType="*/*" />
            </intent-filter>
+           <intent-filter>
+                <action android:name="android.intent.action.PHONE_GOGGLES_COMMUNICATION" />
+            </intent-filter>
         </activity>
 
         <activity-alias android:name=".ui.ForwardMessageActivity"
@@ -262,6 +270,14 @@
                     android:pathPrefix="/search_suggest_shortcut"
                     android:readPermission="android.permission.GLOBAL_SEARCH" />
         </provider>
+
+        <activity android:name=".templates.TemplatesListActivity"
+            android:label="@string/template_list_title">
+        </activity>
+
+        <activity android:name=".templates.TemplateEditor"
+            android:label="@string/template_new_title">
+        </activity>
 
     </application>
 </manifest>
